LPD-63384 portal-k8s-agent-test: simplify testGetConfigurations test case